--- a/deck.mdx
+++ b/deck.mdx
@@ -13,15 +13,21 @@ export {default as theme} from './src/theme';
 
 ---
 
-## <AboutMe />
+<AboutMe />
+
+---
 
 # Let’s talk about single page apps
 
 ---
 
-## <TallImage src='assets/timber.gif' />
+<TallImage src="assets/timber.gif" />
 
-## <TallImage src='assets/create-react-app.png' />
+--
+
+<TallImage src="assets/create-react-app.png" />
+
+--
 
 ## create-react-app
 
