--- a/deck.mdx
+++ b/deck.mdx
@@ -357,8 +357,7 @@ export {default as theme} from './src/theme';
   showNumbers={false}
 	title="app.tsx"
   dark={true}
-	steps={[
-		{},
+	steps={[		
 		{range: [14, 25]},
 		{range: [35, 49]},
     {lines: [39, 40, 41, 45, 46, 47]},
@@ -371,8 +370,7 @@ export {default as theme} from './src/theme';
   showNumbers={false}
 	title="gifs-page.tsx"
   dark={true}
-	steps={[
-		{},
+	steps={[		
 		{lines: [54,56]},
 		{lines: [47, 49]},
 		{lines: [22]},
@@ -414,8 +412,7 @@ export {default as theme} from './src/theme';
   showNumbers={false}
 	title="store.ts"
   dark={true}
-	steps={[
-		{},
+	steps={[		
 		{range: [34, 46]},
 		{range: [37, 43]},
 		{range: [18, 33]},
@@ -529,8 +526,8 @@ export {default as theme} from './src/theme';
 	title="selectors.ts"
   dark={true}
 	steps={[
-      {tokens: {1:[7], 3:[6,7,8,9,10], 5: [3], 6: [5], 7:[6]}},
-      {tokens: {6: [3,4,5,6], 7:[4,5,6,7]}},
+      {tokens: {1:[7], 3:[6,7,8,9,10], 5: [3], 6: [5], 7:[6, 14]}},
+      {tokens: {6: [3,4,5,6], 7:[4,5,6,7, 12,13,14]}},
 	]}
 />
 ---
@@ -610,8 +607,7 @@ export {default as theme} from './src/theme';
   showNumbers={false}
 	title="gifs/types.ts"
   dark={true}
-	steps={[
-			{},
+	steps={[			
 			{range: [28,31]},
 			{range: [16,27]},
 	]}
@@ -623,8 +619,7 @@ export {default as theme} from './src/theme';
   showNumbers={false}
 	title="gifs/reudcer.ts"
   dark={true}
-	steps={[
-			{},
+	steps={[			
 			{range: [6,9]},
 			{range: [13,31]},
 			{range: [14,19]},
